@@ -28,6 +28,7 @@ dt {
       <li><a href="#memsearch">Searching Memory</a></li>
       <li><a href="#results">Results Window</a></li>
       <li><a href="#tips">Tips</a></li>
+      <li><a href="#copyright">Copyright</a></li>
     </ul>
 
     <h1 id="intro">Introduction</h1>
@@ -49,7 +50,7 @@ dt {
     <p>Thanks to:</p>
     <ul>
       <li>Bernhard Elbl - HexBox control - http://sourceforge.net/projects/hexbox</li>
-      <li>wyDay - VistaMenu - http://wyday.com/blog/2008/vista-menu-with-icons-in-c-sharp/</li>
+      <li>Wyatt O'Day - VistaMenu - http://wyday.com/blog/2008/vista-menu-with-icons-in-c-sharp/</li>
       <li>famfamfam.com - Silk Icons - http://www.famfamfam.com/lab/icons/silk/</li>
       <li>Oleh Yuschuk - Disassembler/assembler - http://www.ollydbg.de</li>
     </ul>
@@ -433,5 +434,112 @@ dt {
       Type <code>0x1</code> and click <strong>Change</strong>. The process should crash within
       a few seconds.</dd>
     </dl>
+    
+    <h1 id="copyright">Copyright Information</h1>
+    <h2>Process Hacker</h2>
+    <pre>Process Hacker
+
+Copyright (C) 2008 wj32
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</pre>
+    
+    <h2>HexBox</h2>
+    <p>Process Hacker uses the HexBox component by Bernhard Elbl, licensed under the 
+    Microsoft Public License:</p>
+    <pre>This license governs use of the accompanying software. If you use the software, you
+accept this license. If you do not accept the license, do not use the software.
+
+1. Definitions
+The terms "reproduce," "reproduction," "derivative works," and "distribution" have the
+same meaning here as under U.S. copyright law.
+A "contribution" is the original software, or any additions or changes to the software.
+A "contributor" is any person that distributes its contribution under this license.
+"Licensed patents" are a contributor's patent claims that read directly on its contribution.
+
+2. Grant of Rights
+(A) Copyright Grant- Subject to the terms of this license, including the license conditions 
+    and limitations in section 3, each contributor grants you a non-exclusive, worldwide, 
+    royalty-free copyright license to reproduce its contribution, prepare derivative works 
+    of its contribution, and distribute its contribution or any derivative works that you 
+    create.
+(B) Patent Grant- Subject to the terms of this license, including the license conditions 
+    and limitations in section 3, each contributor grants you a non-exclusive, worldwide, 
+    royalty-free license under its licensed patents to make, have made, use, sell, offer 
+    for sale, import, and/or otherwise dispose of its contribution in the software or 
+    derivative works of the contribution in the software.
+
+3. Conditions and Limitations
+(A) No Trademark License- This license does not grant you rights to use any contributors' 
+    name, logo, or trademarks.
+(B) If you bring a patent claim against any contributor over patents that you claim are 
+    infringed by the software, your patent license from such contributor to the software 
+    ends automatically.
+(C) If you distribute any portion of the software, you must retain all copyright, patent, 
+    trademark, and attribution notices that are present in the software.
+(D) If you distribute any portion of the software in source code form, you may do so only 
+    under this license by including a complete copy of this license with your distribution. 
+    If you distribute any portion of the software in compiled or object code form, you may 
+    only do so under a license that complies with this license.
+(E) The software is licensed "as-is." You bear the risk of using it. The contributors give 
+    no express warranties, guarantees or conditions. You may have additional consumer rights 
+    under your local laws which this license cannot change. To the extent permitted under your 
+    local laws, the contributors exclude the implied warranties of merchantability, fitness for 
+    a particular purpose and non-infringement.</pre>
+    
+    <h2>VistaMenu and SplitButton</h2>
+    <p>Process Hacker uses the VistaMenu and SplitButton components by Wyatt O'Day, licensed under 
+    the following terms:</p>
+    <pre>Copyright (c) 2008, wyDay
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without modification, are permitted 
+provided that the following conditions are met:
+
+    * Redistributions of source code must retain the above copyright notice, this list of 
+    conditions and the following disclaimer.
+    * Redistributions in binary form must reproduce the above copyright notice, this list of 
+    conditions and the following disclaimer in the documentation and/or other materials provided 
+    with the distribution.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR 
+IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND 
+FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR 
+CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL 
+DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, 
+DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER 
+IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT 
+OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
+    
+    <h2>Free Disassembler and Assembler</h2>
+    <p>Process Hacker uses a modified version of the Free Disassembler and Assembler by Oleh Yuschuk, 
+    licensed under the following terms:</p>
+    <pre>Free Disassembler and Assembler
+
+Copyright (C) 2001 Oleh Yuschuk
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA</pre>
   </body>
 </html>
